# Cosmic-Stars-Prototype

./: .gitignore  FFI_DATA_CONTRACT.md  JSON说明.md  Justfile  PROTOCOL.md  README.md  WINDOWS_REBOUNDX.md  database.py  extra_function.py  integrator_check.py  main_simulation.py  pyproject.toml  solar_system.json
data/: solar_system.json
docs/superpowers/plans/: 2026-04-23-rust-far-field-lut.md
docs/superpowers/specs/: 2026-04-23-rust-far-field-lut-design.md
rust/: Cargo.toml
rust/crates/far-field-lut-baker/: Cargo.toml
rust/crates/far-field-lut-baker/src/: lib.rs  main.rs
src/: blackbody_1d_lut_baker.py  database.py  exr_preview.py  far_field_lut_baker.py  integrator_check.py  main_simulation.py
tests/: test_blackbody_1d_lut_baker.py  test_exr_preview.py  test_far_field_lut_baker.py
